--- a/css/nav-sidebar.css
+++ b/css/nav-sidebar.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 250px;
     position: fixed;
+    margin-top: -1px;
     top: 4.5rem;
     /* left: -999px; */
     background-color: #f2f2f2;
@@ -32,10 +33,12 @@
 
 .sidenav a:not(.closebtn) {
     font-size: 1rem;
-    display: block;;
+    display: block;
     margin-top: -1px !important;
     border-bottom: 1px solid lightgrey;
     border-top: 1px solid lightgrey;
+    padding-top: .6875rem !important;
+    padding-bottom: .75rem !important;
 }
 
 .sidenav a:not(.closebtn):hover {
