--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 /*baseline overlay*/
 
-/* #baseline-overlay{
+#baseline-overlay{
 	z-index: 10;
 	opacity: .2;
 	position: absolute;
@@ -26,7 +26,7 @@
 	width: 100%;
 	background-image: url('../images/24px-baseline.png');
 	pointer-events: none;
-} */
+}
 
 /*12 column overlay*/
 /*
